--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
     <input id="depositoCpf" type="text" placeholder="CPF">
     <input id="depositoTelefone" type="tel" placeholder="Telefone com DDD">
     <input id="depositoValor" type="number" placeholder="💰 Valor a depositar (Ex: 50.00)">
-    <button id="btnContinuarDeposito" onclick="criarSolicitacaoDeposito()" onclick="validarEContinuarDeposito()" disabled>Continuar</button>
+    <button id="btnContinuarDeposito" onclick="criarSolicitacaoDeposito()" disabled>Continuar</button>
     <button data-modal-id="modalDepositoFormulario" onclick="fecharModal(event)">❌ Fechar</button>
   </div>
 </div>
