--- a/index.html
+++ b/index.html
@@ -5275,7 +5275,7 @@ function renderOnboardingTela3() {
             <h3>Criar Nova Conta</h3>
             <input type="text" id="nomeCriarConta" placeholder="Nome Completo" required>
             
-            <input type="email" id="emailCriarConta" placeholder="Email (obrigatório para o Firebase)" required>
+            <input type="email" id="emailCriarConta" placeholder="Email" required>
 
             <div class="show-password-container">
                 <input type="password" id="senhaCriarConta" placeholder="Senha" required>
