--- a/index.html
+++ b/index.html
@@ -5287,7 +5287,7 @@ function renderOnboardingTela3() {
             </div>
             <button type="submit" class="botao">Criar Conta</button>
             
-            <button type="button" id="btnLoginNaTelaDeCriarConta" style="background: none; border: none; color: var(--cor-destaque); margin-top: 20px; font-weight: 400; width: auto;">Já tenho conta. **Fazer Login**</button>
+            <button type="button" id="btnLoginNaTelaDeCriarConta" style="background: none; border: none; color: var(--cor-destaque); margin-top: 20px; font-weight: 400; width: auto;">Já tenho conta. *Fazer Login*</button>
         </form>
     `;
     // CHAMA A FUNÇÃO QUE ANEXA OS LISTENER APÓS O HTML SER CRIADO
