--- a/index.html
+++ b/index.html
@@ -2354,6 +2354,14 @@ function carregarCidades(prefix = '') {
 carregarEstados();
 
 function entrar() {
+  // VERIFICA SE O FORMULÁRIO DE CADASTRO ESTÁ VISÍVEL
+  const cadastroFields = document.getElementById("cadastro-fields");
+  if (!cadastroFields.classList.contains('hidden')) {
+    criarConta(); // Se estiver visível, chama a função de criar conta
+    return;
+  }
+
+  // Lógica original de login
   exibirAguarde("Entrando...");
   const email = document.getElementById("email").value.trim();
   const senha = document.getElementById("senha").value.trim();
@@ -2438,7 +2446,7 @@ function criarConta() {
   if (senha !== senhaConfirm) { fecharTodosOsModais(); return alert("As senhas não coincidem."); }
   if (!telefone || telefone.length < 11 || !/^\d+$/.test(telefone)) { fecharTodosOsModais(); return alert("Por favor, insira um telefone válido com DDD (mínimo 11 dígitos)."); }
   if (!email || !senha || !nome || (email !== ADMIN_EMAIL && (!estado || !cidade))) { fecharTodosOsModais(); return alert("Preencha todos os campos obrigatórios"); }
-  if (tipo !== 'cliente' && !cadastroCoords) { fecharTodosOsModais(); return alert("Por favor, permita o acesso à localização para continuar o cadastro de profissional."); }
+  
 
 
   const tipoFinal = email === ADMIN_EMAIL ? "admin" : tipo;
